--- a/stroke_analysis.ipynb
+++ b/stroke_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "19a4a41e",
    "metadata": {},
    "outputs": [
@@ -24,7 +24,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,6 +48,158 @@
     "condition for dates\n",
     "convert the age in fraction OR\n",
     "Give description"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "014f0944",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>age</th>\n",
+       "      <th>hypertension</th>\n",
+       "      <th>heart_disease</th>\n",
+       "      <th>avg_glucose_level</th>\n",
+       "      <th>bmi</th>\n",
+       "      <th>stroke</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>5110.000000</td>\n",
+       "      <td>5110.000000</td>\n",
+       "      <td>5110.000000</td>\n",
+       "      <td>5110.000000</td>\n",
+       "      <td>5110.000000</td>\n",
+       "      <td>4909.000000</td>\n",
+       "      <td>5110.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>36517.829354</td>\n",
+       "      <td>43.226614</td>\n",
+       "      <td>0.097456</td>\n",
+       "      <td>0.054012</td>\n",
+       "      <td>106.147677</td>\n",
+       "      <td>28.893237</td>\n",
+       "      <td>0.048728</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>21161.721625</td>\n",
+       "      <td>22.612647</td>\n",
+       "      <td>0.296607</td>\n",
+       "      <td>0.226063</td>\n",
+       "      <td>45.283560</td>\n",
+       "      <td>7.854067</td>\n",
+       "      <td>0.215320</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>67.000000</td>\n",
+       "      <td>0.080000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>55.120000</td>\n",
+       "      <td>10.300000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>17741.250000</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>77.245000</td>\n",
+       "      <td>23.500000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>36932.000000</td>\n",
+       "      <td>45.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>91.885000</td>\n",
+       "      <td>28.100000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>54682.000000</td>\n",
+       "      <td>61.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>114.090000</td>\n",
+       "      <td>33.100000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>72940.000000</td>\n",
+       "      <td>82.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>271.740000</td>\n",
+       "      <td>97.600000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 id          age  hypertension  heart_disease  \\\n",
+       "count   5110.000000  5110.000000   5110.000000    5110.000000   \n",
+       "mean   36517.829354    43.226614      0.097456       0.054012   \n",
+       "std    21161.721625    22.612647      0.296607       0.226063   \n",
+       "min       67.000000     0.080000      0.000000       0.000000   \n",
+       "25%    17741.250000    25.000000      0.000000       0.000000   \n",
+       "50%    36932.000000    45.000000      0.000000       0.000000   \n",
+       "75%    54682.000000    61.000000      0.000000       0.000000   \n",
+       "max    72940.000000    82.000000      1.000000       1.000000   \n",
+       "\n",
+       "       avg_glucose_level          bmi       stroke  \n",
+       "count        5110.000000  4909.000000  5110.000000  \n",
+       "mean          106.147677    28.893237     0.048728  \n",
+       "std            45.283560     7.854067     0.215320  \n",
+       "min            55.120000    10.300000     0.000000  \n",
+       "25%            77.245000    23.500000     0.000000  \n",
+       "50%            91.885000    28.100000     0.000000  \n",
+       "75%           114.090000    33.100000     0.000000  \n",
+       "max           271.740000    97.600000     1.000000  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
    ]
   }
  ],
